--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,73 @@
 }
 
 body {
-  background: var(--background);
+  /* background: var(--background); */
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.table {
+  border-collapse: collapse;
+  color: black;
+  border-top-width: 0;
+  border-left-width: 0;
+  width: 310px;
+  height: 473.83px;
+}
+
+.table td {
+  text-align: center;
+  border: 0.5px solid #ccc;
+  vertical-align: middle;
+  padding: 4px;
+}
+
+.table th {
+  text-align: center;
+}
+.table th:not(:first-child) {
+  border-right: 0.5px solid #ccc;
+  border-bottom: 1px solid #000;
+}
+.table th:first-child {
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+}
+.table th:last-child {
+  border-right: 1px solid #000;
+}
+.table thead {
+  border-bottom: 1px solid #000;
+}
+.table tr td:not(:first-child) {
+  background-color: #fff;
+}
+.table tr td:first-child {
+  border-right: 1px solid #000;
+  border-left: none;
+}
+
+.table tr td:last-child {
+  border-right: 1px solid #000;
+}
+
+.table tr:nth-child(1) td {
+  border-bottom: 1px solid #000;
+}
+
+.table tr:nth-child(3) td {
+  border-bottom: 1px solid #000;
+}
+
+.table tr:nth-child(4) td {
+  border-bottom: 1px solid #000;
+}
+.table tr:nth-child(5) td {
+  border-bottom: 1px solid #000;
+}
+.table tr:nth-child(6) td {
+  border-bottom: 1px solid #000;
+}
+.table tr:nth-child(7) td {
+  border-bottom: 1px solid #000;
 }
